base/h1_h1_passthrough/h1_h1_passthrough.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app: "h1_h1_passthrough"
  name: "h1-h1-passthrou"
spec:
  ports:
  - name: "port-1-h1-h1-pa"
    port: 9090
    protocol: "TCP"
    targetPort: 9090
  selector:
    app: "h1_h1_passthrough"
  type: "ClusterIP"
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
    app: "h1_h1_passthrough"
  name: "h1-h1-passthrou-deployment"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "h1_h1_passthrough"
  template:
    metadata:
      labels:
        app: "h1_h1_passthrough"
    spec:
      containers:
      - image: "anuruddhal/h1_h1_passthrough:latest"
        imagePullPolicy: "IfNotPresent"
        lifecycle:
          preStop:
            exec:
              command:
              - "sleep"
              - "15"
        name: "h1-h1-passthrou-deployment"
        ports:
        - containerPort: 9090
          name: "port-1-h1-h1-pa"
          protocol: "TCP"
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "100Mi"
            cpu: "200m"
      nodeSelector: {}
