base/h1_h1_passthrough/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: h1-h1-passthrough
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: "/h1_h1_passthrough"
        pathType: Prefix
        backend:
          service:
            name: h1-h1-passthrou
            port:
              number: 443
